Fixed no search results found text is hidden by the window container (#113)

--- a/styles/src/main.css
+++ b/styles/src/main.css
@@ -127,11 +127,11 @@ h2 {
 
 #no-match-search {
   position: absolute;
-  left:0rem;
-  top: 2rem;
+  left: 2rem;
+  top: 4rem;
   text-align: center;
-  font-size: 1rem;
-  z-index: -1;
+  font-size: 1.5rem;
+  padding: 1rem;
 }
 
 .search{
